# GemmBE

./: .gitignore  README.md  main.py  pyproject.toml  train.py
src/: __init__.py  check_sync_peaks.py  config.py  dataset.py  extract_features.py  extract_features_v2.py  filter_fmri.py  model.py  prepare_fmri.py  subject_block.py  tail_model.py  temporal_alignment.py  temporal_transformer.py  validate_tensors.py
src/architecture/: __init__.py
src/callbacks/: metrics_callback.py
src/datamodules/: __init__.py  algonauts_datamodule.py  temporal_algonauts_datamodule.py
src/models/: __init__.py  base_module.py  ridge_model.py  temporal_full_model.py  without_temporal_full_model.py
src/utils/: helpers.py  prepare_fmri.py  temporal_alignment.py  validate_tensors.py
